[metadata]
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = Apache 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
name = dwavebinarycsp
project_urls =
    Changes = https://github.com/dwavesystems/dwavebinarycsp/releases
    Documentation = https://docs.ocean.dwavesys.com
    Souce Code = https://github.com/dwavesystems/dwavebinarycsp
url = https://github.com/dwavesystems/dwavebinarycsp
version = attr: dwavebinarycsp.__version__

# keep description, author and author email up to date with dwavebinarycsp.package_info
author = D-Wave Systems Inc.
author_email = tools@dwavesys.com
description = Solves constraints satisfaction problems with binary quadratic model samplers

[options]
install_requires =
    penaltymodel>=0.16.0,<0.17.0
    penaltymodel-cache>=0.4.0,<0.5.0
    penaltymodel-lp>=0.1.0,<0.2.0
    networkx>=2.0,<3.0
    dimod>=0.8.0,<0.11.0
    six>=1.11.0,<2.0.0
packages = 
    dwavebinarycsp
    dwavebinarycsp.compilers
    dwavebinarycsp.core
    dwavebinarycsp.factories
    dwavebinarycsp.factories.constraint
    dwavebinarycsp.factories.csp
    dwavebinarycsp.io
python_requires = >=3.6

[options.extras_require]
mip = penaltymodel-mip>=0.2.0,<0.3.0
maxgap = penaltymodel-maxgap>=0.5.0,<0.6.0

[pycodestyle]
max-line-length = 100
