[metadata]
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
license = Apache 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
name = dwavebinarycsp
project_urls =
    Changes = https://github.com/dwavesystems/dwavebinarycsp/releases
    Documentation = https://docs.ocean.dwavesys.com
    Souce Code = https://github.com/dwavesystems/dwavebinarycsp
url = https://github.com/dwavesystems/dwavebinarycsp
version = attr: dwavebinarycsp.__version__

# keep description, author and author email up to date with dwavebinarycsp.package_info
author = D-Wave Systems Inc.
author_email = tools@dwavesys.com
description = Solves constraints satisfaction problems with binary quadratic model samplers

[options]
install_requires =
    penaltymodel>=1.0.0
    networkx>=2.4  # lowest version supported by penaltymodel
    dimod>=0.10.9
packages = 
    dwavebinarycsp
    dwavebinarycsp.compilers
    dwavebinarycsp.core
    dwavebinarycsp.factories
    dwavebinarycsp.factories.constraint
    dwavebinarycsp.factories.csp
    dwavebinarycsp.io
python_requires = >=3.9

[options.extras_require]
mip = 
maxgap = 

[pycodestyle]
max-line-length = 100
